# phreeqcrm

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  bmi-yaml-cpp-gtest.environment.yml  bmi-yaml-cpp.environment.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  setup-fortran.yml  wheels.yml
Doxygen/: upper_case.sh
Tests/: CMakeLists.txt  TestBMIComponentCount.cpp  TestBMIInitialize.cpp  TestBMISetPorosity.cpp  test_get_value.cxx  test_irf.cpp  test_new_bmi_phreeqcrm.c  test_print_var_names.cxx
examples/: CMakeLists.txt
examples/swig/: CMakeLists.txt
examples/swig/java/: CMakeLists.txt  advection.java
examples/swig/python/: CMakeLists.txt  advection.py
pybind/: CMakeLists.txt  main.cpp  pybind.cxx  requirements.txt
pybind/tests/: test_basic.py
src/: BMIPhreeqcRM.cpp  BMIPhreeqcRM.h  BMI_Var.cpp  BMI_Var.h  BMI_interface_C.cpp  BMI_interface_C.h  PhreeqcRM.cpp  PhreeqcRM.h  PhreeqcRM.i  RMVARS.h  VarManager.cpp  VarManager.h
src/IPhreeqcPhast/IPhreeqc/: BasicCallback.h  IPhreeqc.cpp  IPhreeqc.hpp  IPhreeqcLib.cpp  IPhreeqc_interface_F.cpp  Var.h
src/IPhreeqcPhast/IPhreeqc/phreeqcpp/: basicsubs.cpp
src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/: PHRQ_exports.h
src/phreeqcrm/: __init__.py
src/swig/: CMakeLists.txt
src/swig/python/: CMakeLists.txt  SimpleAdvect_no_numpy.py  test_get_value.py
swig/: CMakeLists.txt  advection_cpp.py  phreeqcrm-bmi.i
swig/python/: CMakeLists.txt
