[build-system]
requires = [
  "scikit-build-core >= 0.10",
  "swig",
  "numpy",
  "setuptools_scm >= 8.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "phreeqcrm"
dynamic = ["version"]
description = "A reaction module for transport simulators based on the geochemical model PHREEQC."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[tool.scikit-build]
cmake.minimum-version = "3.22"
build.verbose = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/phreeqcrm/_version.py"]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "swig>=4.4.1",
]

[tool.setuptools_scm]
# All the usual setuptools_scm settings work here
version_scheme = "guess-next-dev"    # default, or "python-simplified-semver", "release-branch-semver", etc.
local_scheme = "node-and-date"       # or "node-and-date", "dirty-tag", etc.
write_to = "src/phreeqcrm/_version.py"
write_to_template = "__version__ = '{version}'\n"
